--- a/bin/Immersion/assets/immersion/lang/en.json
+++ b/bin/Immersion/assets/immersion/lang/en.json
@@ -648,9 +648,9 @@
   "block-panel-kapok-debarked-*":"Kapok Debarked Panel",
   "block-panel-maple-debarked-*":"Maple Debarked Panel",
   "blockdesc-panel-bamboo-*":"Place on ground (Shift + RMB) and add materials to construct blocks. Add leather strips to begin Door Assembly,  Very Thin Branches to create a Bamboo Chest Frame, or bamboo stakes to craft bamboo planks. Can be placed on walls or floors for decoration.",
-  "blockdesc-panel-*-planks-*":"Place on ground (Shift + RMB) and add materials to construct blocks.  Add Very Thin Branches to create a drying tray. Can be placed on walls or floors for decoration. Place on the ground and use the saw to create half panels.",
+  "blockdesc-panel-*-planks-*":"Place on ground (Sneak + RMB) and add materials to construct blocks.  Add Very Thin Branches to create a drying tray. Can be placed on walls or floors for decoration. Place on the ground and use the saw to create half panels.",
   "blockdesc-panel-*-bark-*":"place on ground or walls for decoration.",
-  "blockdesc-panel-*-debarked-*":"place on ground or walls for decoration, on ground shift right click with hinges to make Door Assemble, or Very Thin Branches to make a Chest Frame.",
+  "blockdesc-panel-*-debarked-*":"Place on ground (Sneak + RMB) and add materials to construct blocks.  Add hinges to begin a Wood Door Assembly, or Very Thin Branches to create a Wood Chest Frame. Can be placed on walls or floors for decoration. Place on the ground and use the saw to create half panels.",
   
   "recipeingredient-item-mutton-raw": "mutton",  
   "recipeingredient-item-porkchops-raw": "pork chops",
@@ -2087,9 +2087,9 @@
 	"block-sisalrug-small-ground-*": "Sisalrug Small Ground",
 	"block-sisalrug-medium-ground-*": "Sisalrug Medium Ground",
 	"block-sisalrug-large-ground-*": "Sisalrug Large Ground",
-	"blockdesc-sisalrug-small-ground-*": "Use as a label when creating chests, When placed in a sunny location, dries up to 8 berries",
-	"blockdesc-sisalrug-medium-ground-*": "When placed in a sunny location, dries up to 16 berries.",
-	"blockdesc-sisalrug-large-ground-*": "Used to craft the Burden basket. When placed in a sunny location, dries up to 32 berries.",
+	"blockdesc-sisalrug-small-ground-*": "Use as a label when creating chests, When placed in a sunny location, dries 16 berries and produces 8 Dryfruit. ",
+	"blockdesc-sisalrug-medium-ground-*": "When placed in a sunny location, dries up to 32 berries and produces 16 Dryfruit.",
+	"blockdesc-sisalrug-large-ground-*": "Used to craft the Burden basket. When placed in a sunny location, dries up to 64 berries and produces 32 Dryfruit.",
 	
 	"block-3droad-andesite-bricks": "Road Andesite (Bricks)",
 	"block-3droad-basalt-bricks": "Road Basalt (Bricks)",
